--- a/price.html
+++ b/price.html
@@ -31,6 +31,7 @@
 							<li><a href="about.html">About</a></li>
 							<li><a href="price.html">Price</a></li>
 							<li><a href="contact.html">Contact</a></li>
+							<li><a href="classes.html">Classes</a></li>
 						</ul>
 					</div>
 					<a href='index.html' class="logo"><img src="images/logo.png" /></a>
